--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -40,6 +40,8 @@
 <li>Reddit: <em>pkzander</em></li>
 <li>Github: <em>botpsycho</em></li>
 <li>Gitlab: <em>botpsycho</em></li>
+<li>Lichess: Dr_Magician</li>
+<li>Chess.com: Dr_Magician</li>
 </ul>
 <h2 id="please-don-t-annoy-me">Please don't annoy me</h2>
 <ul>
