Changed some details

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -36,7 +36,7 @@
 <ul>
 <li>Email: <strong>pkzander@protonmail.com</strong></li>
 <li>Matrix: <em>botpsycho</em></li>
-<li>Discord: <em>botpsycho</em></li>
+<li>Discord: <em>botpsycho#4121</em></li>
 <li>Reddit: <em>pkzander</em></li>
 <li>Github: <em>botpsycho</em></li>
 <li>Gitlab: <em>botpsycho</em></li>
@@ -48,7 +48,6 @@
 <li>Don't ask about issues you are getting in your system.</li>
 <li>If you don't want conversation, just use email.</li>
 <li>I read all my emails, so don't resend same stuff again.</li>
-<li>Please be patient, sometimes I get lot of messages.</li>
 <li>Don't mind if I fail to respond. I miss sometimes.</li>
 </ul>
 
