--- a/public/about/index.html
+++ b/public/about/index.html
@@ -33,15 +33,13 @@
   
 </div>
 <h2 id="who-am-i">Who am I?</h2>
-<p>I am just a guy who loves tech. My internet identity is botpsycho. I like to experiment with different softwares. I am also free and open source software lover. </p>
+<p>I am just a guy who loves tech. My internet identity is botpsycho. I like to experiment and tinker with different softwares. I am also a free and open source software lover. </p>
 <h2 id="hobbies">Hobbies:</h2>
 <ul>
 <li>Srcipting</li>
 <li>Programming</li>
 <li>Learning about different softwares</li>
 <li>Reading self help books</li>
-<li>Playing chess</li>
-<li>Learning about different softwares</li>
 <li>Playing chess</li>
 </ul>
 <hr />
@@ -55,7 +53,6 @@
 <li>C</li>
 <li>Bash</li>
 </ul>
-<hr />
 
 
     </main>
