added search bar

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <main>
       
 <center>
- <blockquote">
+ <blockquote>
   <b>❝ EVER TRIED. EVER FAILED. NO MATTER.<br>
   <span>TRY AGAIN. FAIL AGAIN. FAIL BETTER ❞ </b></span>
  </blockquote>
